<resources>
    <string name="app_name">go3</string>
    <string name="app_ch_name">跑跑跑</string>
    //login.xml
    <string name="et_account">手机号/e-mail/GO ID</string>
    <string name="et_password">密码</string>
    <string name="btn_go">go</string>
    <string name="tv_login_help">无法登录?</string>
    <string name="tv_register">注册</string>
    //shop.xml
    <string name="tv_ps">请填写要求（口味等等）</string>
    <string name="btn_pay">ok</string>
    //LoginActivity.java
    <string name="msg_account_or_password_err">账号或密码错误</string>
</resources>
